--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.4",
     "next": "13.1.6",
+    "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "typescript": "4.9.5"
   }
 }
